basic page + routing added

--- a/src/app/root/root.component.html
+++ b/src/app/root/root.component.html
@@ -1,1 +1,4 @@
-<p>root works!</p>
+<progress-bar></progress-bar>
+
+<empty-layout *ngIf="currentLayout === 'empty'"></empty-layout>
+<verticle-layout *ngIf="currentLayout === 'side_nav'"></verticle-layout>
