--- a/src/app/layouts/vertical-nav-layout/components/toolbar/toolbar.component.html
+++ b/src/app/layouts/vertical-nav-layout/components/toolbar/toolbar.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar #matToolbar color="secondary" class="custom-toolbar">
+<mat-toolbar #matToolbar color="primary" class="custom-toolbar">
   <mat-toolbar-row>
     <div class="flex row item-center">
       <button mat-icon-button (click)="openDrawer($event)" color="primary">
@@ -19,7 +19,7 @@
           class="flex item-center my-auto"
           style="gap: 6px; margin-left: 6px; margin-right: 6px"
         >
-          <mat-icon svgIcon="profile" class="accent-color" />
+          <mat-icon svgIcon="profile" class="color-primary" />
           <span class="text-sm" style="font-weight: 500">John doe</span>
         </div>
         <mat-menu #menu="matMenu">
