--- a/src/app/layouts/vertical-nav-layout/components/side-drawer/side-drawer.component.scss
+++ b/src/app/layouts/vertical-nav-layout/components/side-drawer/side-drawer.component.scss
@@ -15,6 +15,9 @@
     border-right: unset !important;
     box-shadow: 1px 0 4px -2px #242424;
     max-width: 230px;
+    mat-toolbar {
+      flex-shrink: 0;
+    }
     .mat-drawer-inner-container {
       box-sizing: border-box;
       display: flex;
