--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -124,10 +124,11 @@ body {
 }
 
 .page-body {
-  margin: 18px 24px;
+  margin: 18px;
   background-color: #ffffff;
   padding: 14px;
   border-radius: 4px;
+  overflow-x: auto;
 }
 
 .flex-auto {
