--- a/src/app/layouts/empty/empty.component.scss
+++ b/src/app/layouts/empty/empty.component.scss
@@ -1,31 +1,6 @@
 empty-layout {
-  display: block;
+  display: flex;
   height: 100%;
   width: 100%;
   box-sizing: border-box;
-  // .main-container {
-  //   display: flex;
-  //   flex: 1 1 auto;
-  //   position: relative;
-  //   height: 100%;
-  //   width: 100%;
-  //   .container-sub {
-  //     position: relative;
-  //     display: flex;
-  //     flex: 1 1 0%;
-  //     flex-direction: column;
-  //     width: 100%;
-  //     min-width: 0;
-  //     min-height: 0;
-
-  //     .scroller-container {
-  //       position: relative;
-  //       display: flex;
-  //       flex-direction: column;
-  //       overflow-x: hidden;
-  //       overflow-y: auto;
-  //       flex: 1 1 0%;
-  //     }
-  //   }
-  // }
 }
